--- a/package.json
+++ b/package.json
@@ -10,19 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.8",
+    "i18next": "^23.10.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "framer-motion": "^11.0.8",
-    "react-particles": "^2.12.2",
-    "tsparticles": "^3.3.0",
-    "tsparticles-slim": "^2.12.0",
-    "i18next": "^23.10.1",
     "react-i18next": "^14.1.0",
+    "react-icons": "^5.5.0",
+    "react-particles": "^2.12.2",
     "react-type-animation": "^3.2.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.2.1",
+    "tsparticles": "^3.3.0",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
